--- a/css/style.css
+++ b/css/style.css
@@ -163,6 +163,56 @@ body {
   line-height: 1;
   font-weight: 600; }
 
-/*------------------------------*/
-/*----MIXING-------*/
-/*------------------------------*/
+.log-in {
+  width: 70%;
+  margin: 1.8rem auto;
+  text-align: center; }
+  @media only screen and (max-width: 25em) {
+    .log-in {
+      width: 90%; } }
+  .log-in__icon {
+    display: inline-block;
+    color: #1da1f2;
+    font-size: 4rem;
+    margin-bottom: 3rem; }
+  .log-in__heading {
+    font-size: 2.2rem;
+    margin-bottom: 2rem; }
+  .log-in__input {
+    font-size: 1.5rem;
+    width: 58%;
+    margin: 0 24% 2rem 24%;
+    display: block;
+    padding: 0 1rem 2rem 1rem;
+    height: 6rem;
+    background-color: rgba(195, 195, 195, 0.1);
+    border: 0;
+    border-bottom: 2px solid #657786;
+    transition: all .3s; }
+    .log-in__input:focus {
+      outline: none;
+      border-bottom: 2px solid #1da1f2; }
+    .log-in__input::-webkit-input-placeholder {
+      color: #657786; }
+  .log-in__input:focus::-webkit-input-placeholder {
+    color: #1da1f2; }
+  .log-in__btn {
+    border: 0;
+    width: 58%;
+    margin: 0 24% 3rem 24%;
+    display: block;
+    background-color: rgba(29, 161, 242, 0.5);
+    padding: 1.3rem;
+    border-radius: 10rem;
+    font-size: 1.5rem;
+    font-weight: 700;
+    color: #fff; }
+  .log-in__link:link, .log-in__link:visited {
+    text-decoration: none;
+    display: inline-block;
+    font-size: 1.4rem;
+    color: #1da1f2; }
+    .log-in__link:link:not(:last-child), .log-in__link:visited:not(:last-child) {
+      margin-right: 1.5rem; }
+  .log-in__link:hover, .log-in__link:visited {
+    border-bottom: 1px solid currentColor; }
