modify login page

--- a/css/style.css
+++ b/css/style.css
@@ -86,7 +86,7 @@ body {
   @media only screen and (max-width: 43.75em) {
     .btn__sign-up:link,
     .btn__sign-up:visited {
-      margin-bottom: 1rem; } }
+      margin-bottom: 2rem; } }
 
 .btn__sign-up:hover,
 .btn__sign-up:active {
@@ -146,9 +146,6 @@ body {
   align-items: center; }
   .side__box:not(:last-child) {
     margin-bottom: 4rem; }
-    @media only screen and (max-width: 43.75em) {
-      .side__box:not(:last-child) {
-        margin-bottom: 3rem; } }
 
 .side__icon {
   height: 3rem;
@@ -156,7 +153,7 @@ body {
   fill: #fff;
   margin-right: 2rem; }
 
-.side__link {
+.side__link:link, .side__link:visited {
   text-decoration: none;
   font-size: 2.1rem;
   color: #fff;
@@ -176,7 +173,7 @@ body {
     font-size: 4rem;
     margin-bottom: 3rem; }
   .log-in__heading {
-    font-size: 2.2rem;
+    font-size: 2.3rem;
     margin-bottom: 2rem; }
   .log-in__input {
     font-size: 1.5rem;
@@ -185,7 +182,7 @@ body {
     display: block;
     padding: 0 1rem 2rem 1rem;
     height: 6rem;
-    background-color: rgba(195, 195, 195, 0.1);
+    background-color: rgba(195, 195, 195, 0.2);
     border: 0;
     border-bottom: 2px solid #657786;
     transition: all .3s; }
@@ -201,16 +198,17 @@ body {
     width: 58%;
     margin: 0 24% 3rem 24%;
     display: block;
-    background-color: rgba(29, 161, 242, 0.5);
+    background-color: #1da1f2;
     padding: 1.3rem;
     border-radius: 10rem;
-    font-size: 1.5rem;
+    font-size: 1.6rem;
     font-weight: 700;
-    color: #fff; }
+    color: #fff;
+    cursor: pointer; }
   .log-in__link:link, .log-in__link:visited {
     text-decoration: none;
     display: inline-block;
-    font-size: 1.4rem;
+    font-size: 1.6rem;
     color: #1da1f2; }
     .log-in__link:link:not(:last-child), .log-in__link:visited:not(:last-child) {
       margin-right: 1.5rem; }
