--- a/sass/_login.scss
+++ b/sass/_login.scss
@@ -14,7 +14,7 @@
   }
 
   &__heading{
-    font-size: 2.2rem;
+    font-size: 2.3rem;
     margin-bottom: 2rem;
   }
 
@@ -25,7 +25,7 @@
     display: block;
     padding: 0 1rem 2rem 1rem;
     height: 6rem;
-    background-color: rgba(195, 195, 195, .1);
+    background-color: rgba(195, 195, 195, .2);
     border: 0;
     border-bottom: 2px solid rgb(101, 119, 134);
     transition: all .3s;
@@ -49,19 +49,20 @@
     width: 58%;
     margin: 0 24% 3rem 24%;
     display: block;
-    background-color: rgba(29, 161, 242, 0.5);
+    background-color: rgb(29, 161, 242);
     padding: 1.3rem;
     border-radius: 10rem;
-    font-size: 1.5rem;
+    font-size: 1.6rem;
     font-weight: 700;
     color: #fff;
+    cursor: pointer;
   }
 
   &__link:link,
   &__link:visited{
     text-decoration: none;
     display: inline-block;
-    font-size: 1.4rem;
+    font-size: 1.6rem;
     color: rgb(29, 161,242);
 
     &:not(:last-child){
