--- a/sass/_login.scss
+++ b/sass/_login.scss
@@ -1,10 +1,18 @@
 .log-in{
-  width: 70%;
-  margin: 1.8rem auto;
+  width: 40%;
+  margin: 4rem auto;
   text-align: center;
 
+  @media only screen and (max-width: 43.75em) {
+    width: 60%;
+  }
   @media only screen and (max-width: 25em) {
-    width: 90%;
+    width: 80%;
+  }
+  &__container{
+    border-radius: 1rem;
+    box-shadow: 0 1rem 1.2rem rgba(0,0,0,.3);
+    padding: 2rem;
   }
   &__icon{
     display: inline-block;
@@ -20,8 +28,8 @@
 
   &__input{
     font-size: 1.5rem;
-    width: 58%;
-    margin: 0 24% 2rem 24%;
+    width: 100%;
+    margin-bottom: 2rem;
     display: block;
     padding: 0 1rem 2rem 1rem;
     height: 6rem;
@@ -51,8 +59,8 @@
 
   &__btn{
     border: 0;
-    width: 58%;
-    margin: 0 24% 3rem 24%;
+    width: 100%;
+    margin-bottom: 3rem;
     display: block;
     background-color: rgb(29, 161, 242);
     padding: 1.3rem;
@@ -63,12 +71,18 @@
     cursor: pointer;
   }
 
+  &__btn:focus{
+    outline: none;
+  }
+
   &__link:link,
   &__link:visited{
     text-decoration: none;
     display: inline-block;
     font-size: 1.6rem;
     color: rgb(29, 161,242);
+    border-bottom: 1px solid transparent;
+
 
     &:not(:last-child){
       margin-right: 1.5rem;
