--- a/sass/_home.scss
+++ b/sass/_home.scss
@@ -33,6 +33,7 @@ body{
 
   @media only screen and (max-width: 43.75em) {
     flex-direction: column-reverse;
+    height: 100vh;
   }
 
   &__side{
@@ -41,7 +42,7 @@ body{
     background-image:linear-gradient(to right,
             rgba(26, 145, 218, .7),
             rgba(26, 145, 218, .7)),
-            url("../img/images.jpeg");
+    url("../img/images.jpeg");
     background-size: cover;
     background-position: center;
     position: relative;
@@ -68,7 +69,11 @@ body{
     color: rgb(29, 161, 242);
     margin-bottom: 3rem;
     @media only screen and (max-width: 43.75em) {
-      margin-bottom: 1.8rem;
+      margin-bottom: 2rem;
+    }
+
+    @media only screen and (max-width: 25em) {
+      margin-bottom: 1rem;
     }
   }
 
@@ -89,6 +94,10 @@ body{
   margin-bottom: 6rem;
   @media only screen and (max-width: 43.75em) {
     margin-bottom: 4rem;
+  }
+
+  @media only screen and (max-width: 25em) {
+    margin-bottom: 2.8rem;
   }
 }
 
