change next btn

--- a/css/style.css
+++ b/css/style.css
@@ -255,7 +255,7 @@ body {
     text-align: center; }
   .sign-up__btn {
     color: white;
-    padding: .5rem 1.5rem;
+    padding: 1rem 3.5rem;
     font-size: 1.6rem;
     font-weight: 600;
     background-color: #1da1f2;
