--- a/sass/_sign-up.scss
+++ b/sass/_sign-up.scss
@@ -25,7 +25,7 @@
 
   &__btn{
     color: white;
-    padding: .5rem 1.5rem;
+    padding: 1rem 3.5rem;
     font-size: 1.6rem;
     font-weight: 600;
     background-color: rgb(29, 161, 242);
