--- a/css/style.css
+++ b/css/style.css
@@ -270,7 +270,7 @@ body {
     font-size: 2.2rem;
     margin-bottom: 2rem; }
   .sign-up__heading-3 {
-    display: block;
+    display: inline-block;
     font-size: 1.7rem;
     margin-bottom: .5rem; }
   .sign-up__input {
