footer to center

--- a/sass/_home.scss
+++ b/sass/_home.scss
@@ -153,7 +153,7 @@ body{
     list-style: none;
     display: flex;
     flex-wrap: wrap;
-    align-content: space-between;
+    justify-content: center;
   }
 
   &__item{
