--- a/css/style.css
+++ b/css/style.css
@@ -125,7 +125,7 @@ body {
     list-style: none;
     display: flex;
     flex-wrap: wrap;
-    align-content: space-between; }
+    justify-content: center; }
   .footer__item {
     margin-right: 1rem;
     margin-bottom: 1rem; }
